Patent added to CV

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -10,10 +10,10 @@
 \usepackage[utf8]{inputenc}
 
 % adjust the page margins
-\usepackage[scale=0.80]{geometry}
+\usepackage[scale=0.75]{geometry}
 % \setlength{\hintscolumnwidth}{3cm}.
 
-\usepackage[scale=0.80]{geometry}
+\usepackage[scale=0.75]{geometry}
 \setlength{\hintscolumnwidth}{3cm}
 
 % personal data
@@ -26,20 +26,19 @@
 \social[linkedin][https://www.linkedin.com/in/yulia-yakovleva-633505100/]{Yulia Yakovleva}
 % \extrainfo{\url{kotobank.ch/~robolamp/}}
 
-
 \begin{document}
 \makecvtitle
 
 \section{Experience}
 
-\cventry{March~2022 -- Now}{Machine learning engineer}{Rainbow.ai}{Warsaw}{}{
+\cventry{March~2022 -- September~2022}{Machine learning engineer}{Rainbow.ai}{Warsaw}{}{
 \begin{itemize}
-    \item Weather prediction using deep learning models (Python, PyTorch, Image processing, Weather data)
+    \item I worked on applying deep learning models for weather forecasting (Python, PyTorch, Weather RADAR data).
 \end{itemize}}
 
 \cventry{November~2021 -- February~2022}{Machine learning engineer}{Descriptor.ai}{Remote/Moscow}{}{
 \begin{itemize}
-    \item I created a few good-performing voice sentiment analysis models (Python, NumPy, TensorFlow, Keras, Voice data).
+    \item I created a few good-performing voice sentiment analysis models (Python, NumPy, TensorFlow, Keras, Audio data).
 \end{itemize}}
 
 \cventry{July~2021 -- October~2021}{Machine learning engineer}{MediaZona}{Remote/Moscow}{}{
@@ -105,22 +104,25 @@ Full-stack web-development
 % \end{itemize}
 }
 
-\section{Volunteering}
-\cventry{May~2020 -- now}{Web developer/data analyst}{OVD-Info}{Remote/Moscow}{}{
-  OVD-Info is an independent human rights media project.
-  I'm participating in development of information collection and analysis system for OVD-Info using SQL, Python and Django.
+\section{Patents}
+\cventry{2020}{Method of and system for determining traffic signal state}{}{}{}{
+  Artamonov, Kalyuzhny, Yakovleva
+  \begin{itemize}
+    \item US Patent US20210201058A1, application at 2020.09.28, pending.
+    \item European Patent EP3842996A1, application at 2020.10.14, pending.
+  \end{itemize}
 }
 
 \section{Talks}
-\cventry{}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow and PyLadies Kazan}{}{}{}
-% A short talk in Russian about the difficulties of traffic lights recognition and
-% about Yandex Self-Driving Cars traffic lights recognition pipeline. \newline
-% }
-\cventry{}{Myths about Self-Driving Cars}{Presented at WTM Moscow}{}{}{}
+\cventry{2019}{Myths about Self-Driving Cars}{Presented at WTM Moscow}{}{}{}
 % An interactive talk in Russian about self-driving cars architecture,
 % sensors and testing. \newline
 % }
-\cventry{}{Data mining in Yandex Self-Driving Cars}{Presented at Pytup Moscow}{}{}{}
+\cventry{2019}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow and PyLadies Kazan}{}{}{}
+% A short talk in Russian about the difficulties of traffic lights recognition and
+% about Yandex Self-Driving Cars traffic lights recognition pipeline. \newline
+% }
+\cventry{2020}{Data mining in Yandex Self-Driving Cars}{Presented at Pytup Moscow}{}{}{}
 % A short talk in Russian about data processing pipeline in
 % Yandex Self-Driving Cars project. \newline
 % }
@@ -140,11 +142,11 @@ Full-stack web-development
   MSc in Computer Science.
 }
 
-\section{Languages}
-\cvitemwithcomment{Russian}{Native speaker}{}
-\cvitemwithcomment{English}{Fluent}{}
-\cvitemwithcomment{German}{Beginner}{}
-\cvitemwithcomment{Tatar}{Beginner}{}
+\section{Volunteering}
+\cventry{May~2020 -- now}{Web developer/data analyst}{OVD-Info}{Remote/Moscow}{}{
+  OVD-Info is an independent human rights media project.
+  I'm participating in development of information collection and analysis system for OVD-Info using SQL, Python and Django.
+}
 
 \section{Skills}
 \subsection{Main:}
@@ -152,6 +154,12 @@ Full-stack web-development
 \subsection{Experience with:}
 \cvitem{}{Bash, C, OpenCV, JS (some outdated frameworks), Django,  Docker, \LaTeX, Dynamic systems math
 modelling, Matlab/Simulink. }
+
+\section{Languages}
+\cvitemwithcomment{Russian}{Native speaker}{}
+\cvitemwithcomment{English}{Fluent}{}
+\cvitemwithcomment{German}{Beginner}{}
+\cvitemwithcomment{Tatar}{Beginner}{}
 
 \section{Pet projects}
 \cventry{}{rTerm}{\url{github.com/robolamp/rTerm}}{}{}{
