--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -19,7 +19,7 @@
 % personal data
 \name{Yulia}{Yakovleva}
 \title{Software engineer}
-\address{}{Warsaw}{Poland}
+\address{}{Amsterdam}{Netherlands}
 % \email{robolamp@ya.ru}
 \email{redslowj@gmail.com} 
 \social[github]{robolamp}
@@ -31,10 +31,19 @@
 
 \section{Experience}
 
-\cventry{March~2022 -- September~2022}{Machine learning engineer}{Rainbow.ai}{Warsaw}{}{
-\begin{itemize}
-    \item I worked on applying deep learning models for weather forecasting (Python, PyTorch, Weather RADAR data).
+\cventry{November~2022 -- Now}{Machine learning engineer}{Stability.ai}{Warsaw/Amsterdam}{}{
+  I worked on the following projects:
+\begin{itemize}   
+    \item Stable-Finetuning (Python, PyTorch, CUDA, diffusion models):
+    My responsibility was pre-processing and algorithm side of the service and only a bit on ifrastructure.
+    \item LLM-related effort.
+    \item Brain2image effort.
 \end{itemize}}
+
+% \cventry{March~2022 -- September~2022}{Machine learning engineer}{Rainbow.ai}{Warsaw}{}{
+% \begin{itemize}
+%     \item I worked on applying deep learning models for weather forecasting (Python, PyTorch, Weather RADAR data).
+% \end{itemize}}
 
 \cventry{November~2021 -- February~2022}{Machine learning engineer}{Descriptor.ai}{Remote/Moscow}{}{
 \begin{itemize}
