Add: short version and long version update

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -190,7 +190,8 @@ multiple times and publishing animation of the most interesting one every
 12 hours at \href{t.me/random_three_body_problem}{Telegram channel}.
 \newline}
 
-% \section{Interests}
-% \cvitem{}{Space, alpine skiing, cross-country skiing, bicycling.}
+% \section{Interests/hobbies}
+% \cvitem{}{wildife photography, alpine skiing, cross-country skiing, books, jogging}
+
 
 \end{document}
