--- a/my_cv_full_eng.tex
+++ b/my_cv_full_eng.tex
@@ -9,35 +9,54 @@
 % character encoding
 \usepackage[utf8]{inputenc}
 
-% adjust the page margins
 \usepackage[scale=0.75]{geometry}
-% \setlength{\hintscolumnwidth}{3cm}.
 
-\usepackage[scale=0.75]{geometry}
 \setlength{\hintscolumnwidth}{3cm}
 
 % personal data
 \name{Yulia}{Yakovleva}
 \title{Software engineer}
-\address{}{Warsaw}{Poland}
-\email{robolamp@ya.ru}
+\address{}{Amsterdam}{Netherlands}
+% \email{robolamp@ya.ru}
+\email{redslowj@gmail.com} 
 \social[github]{robolamp}
+\social[linkedin][https://www.linkedin.com/in/yulia-yakovleva-633505100/]{Yulia Yakovleva}
 \extrainfo{\url{kotobank.ch/~robolamp/}}
-
 
 \begin{document}
 \makecvtitle
 
+\section{Main skills}
+% \subsection{Main:}
+\cvitem{}{C++ (Eigen), Python (PyTorch, Jupyter, NumPy, Keras, TensorFlow, Sklearn), Git, ROS, Linux, Machine Learning, Deep Learning, HPC, Computer Vision, NLP, LLMs}
+% \subsection{Experience with:}
+% \cvitem{}{Bash, C, OpenCV, JS (some outdated frameworks), Django,  Docker, \LaTeX, Dynamic systems math
+% modelling, Matlab/Simulink. }
+
 \section{Experience}
 
-\cventry{March~2022 -- Now}{Machine learning engineer}{Rainbow.ai}{Warsaw}{}{
+\cventry{November~2022 -- Now}{Machine learning engineer}{Stability.ai}{Amsterdam}{}{
+  I worked on the following projects:
+\begin{itemize}   
+    \item Stable-Finetuning (Python, PyTorch, CUDA, diffusion models, HPC):
+    I was mostly focused on whole preprocessing and training algorithm optimization.
+    With my effort, the fine-tuning prosess became multiple times faster while the size of model increased.
+    I managed to "accelerate" SAM to process big batches of images in less than 1 second.
+    To comply with regulation, I managed to build a facial fine-tuning without facial keypoints detection.
+    During the developed process, I was migrating the service between multiple generations of fine-tuned models and backends.
+    \item Stability models API (Python, PyTorch, CUDA, diffusion models, AWS, HPC):
+    Similar effort but without direct involvement into algorithms development.
+    \item LLM-related project (Python, PyTorch, CUDA, LLMs, axolotl, HPC).
+\end{itemize}}
+
+\cventry{March~2022 -- September~2022}{Machine learning engineer}{Rainbow.ai}{Warsaw}{}{
 \begin{itemize}
-    \item Weather prediction using deep learning models (Python, PyTorch, Image processing, Weather data)
+    \item I worked on applying deep learning models for weather forecasting (Python, PyTorch, Weather RADAR data).
 \end{itemize}}
 
 \cventry{November~2021 -- February~2022}{Machine learning engineer}{Descriptor.ai}{Remote/Moscow}{}{
 \begin{itemize}
-    \item I created a few good-performing voice sentiment analysis models (Python, NumPy, TensorFlow, Keras, Voice data).
+    \item I created a few good-performing voice sentiment analysis models (Python, NumPy, TensorFlow, Keras, Audio data).
 \end{itemize}}
 
 \cventry{July~2021 -- October~2021}{Machine learning engineer}{MediaZona}{Remote/Moscow}{}{
@@ -47,7 +66,6 @@
       My responsibilities included both engineering/coding and interaction with non-tech employees of MediaZona on translating their 
       non-tech requirements into "tech language", finding the data and getting a feedback on text generators' work.
 \end{itemize}}
-
 
 \cventry{March~2018 -- May~2021}{Software engineer}{Yandex Self-Driving Cars}{Moscow}{}{
 \begin{itemize}
@@ -62,9 +80,9 @@
   \end{itemize}
 \end{itemize}}
 
-\cventry{August~2017 -- March~2018}{Software engineer}{Unemployed/Self-employed}{Moscow}{}{}
-
 \cventry{October~2015 -- August~2017}{Robotics researcher/developer}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
+  (C++, Python, ROS,  Eigen, Computer Vision, Kalman filters)
+ I worked on self-driving car prototype positioning and control software including: system launch tool to replace ROSLaunch, positioning and control systems (C++, Python, ROS,  Eigen, Computer Vision, Kalman filters).
 \begin{itemize}
 \item Self-driving car prototype positioning and control software.
   I created or worked on the following modules:
@@ -76,14 +94,16 @@
   \item Road markup-relied localization system (C++, ROS).
   \end{itemize}
 \item Initiative works in deep learning for robotics control (just for fun).
-\end{itemize}}
+\end{itemize}
+}
 
 \cventry{June~2015 -- October~2015}{Junior web-developer}{WETA Group}{Remote}{}{
 Full-stack web-development
 \begin{itemize}
 \item Information security system web-interface: \newline
   I developed two web-applications using Django non-rel backend and JS frontend with MongoDB database;
-\end{itemize}}
+\end{itemize}
+}
 
 \cventry{July~2013 -- June~2015}{Junior control systems developer}{Modern Signal Processing and Control Technologies R\&D Laboratory}{Chelyabinsk}{}{
 \begin{itemize}
@@ -100,27 +120,32 @@ Full-stack web-development
   \end{itemize}
 \item I developed UAV test stand software: Scilab, interaction with National
  Instruments data acquisition system.
-\end{itemize}}
+\end{itemize}
+}
 
-\cventry{September~2012 -- June~2015}{Laboratory assistant}{South Ural State
- University}{Chelyabinsk}{}{Control systems research.}
+\section{Patents}
+\cventry{2020}{Method of and system for determining traffic signal state}{}{}{}{
+  Artamonov, Kalyuzhny, Yakovleva
+  \begin{itemize}
+    \item US Patent US20210201058A1, application at 2020.09.28, granted.
+    \item European Patent EP3842996A1, application at 2020.10.14, pending.
+  \end{itemize}
+}
 
 \section{Talks}
-\cventry{}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow and PyLadies Kazan}{}{}{
-A short talk in Russian about the difficulties of traffic lights recognition and
-about Yandex Self-Driving Cars traffic lights recognition pipeline. \newline}
-\cventry{}{Myths about Self-Driving Cars}{Presented at WTM Moscow}{}{}{
-An interactive talk in Russian about self-driving cars architecture,
-sensors and testing. \newline}
-\cventry{}{Data mining in Yandex Self-Driving Cars}{Presented at Pytup Moscow}{}{}{
-A short talk in Russian about data processing pipeline in
-Yandex Self-Driving Cars project. \newline}
-
-\section{Volunteering}
-\cventry{May~2020 -- now}{Web developer/data analyst}{OVD-Info}{Remote/Moscow}{}{
-  OVD-Info is an independent human rights media project.
-  I'm participating in development of information collection and analysis system for OVD-Info using SQL, Python and Django.
+\cventry{2019}{Myths about Self-Driving Cars}{Presented at WTM Moscow}{}{}{
+  An interactive talk in Russian about self-driving cars architecture,
+  sensors and testing. \newline
 }
+\cventry{2019}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow and PyLadies Kazan}{}{}{
+  A short talk in Russian about the difficulties of traffic lights recognition and
+  about Yandex Self-Driving Cars traffic lights recognition pipeline. \newline
+}
+\cventry{2020}{Data mining in Yandex Self-Driving Cars}{Presented at Pytup Moscow}{}{}{
+  A short talk in Russian about data processing pipeline in
+  Yandex Self-Driving Cars project. \newline
+}
+\cventry{2023}{What's going on in AI world}{Presented in Warsaw}{}{}{}
 
 \section{Education}
 \cvitem{2010--2015}{
@@ -137,18 +162,19 @@ Yandex Self-Driving Cars project. \newline}
   MSc in Computer Science.
 }
 
+\section{Volunteering}
+\cventry{May~2020 -- now}{Web developer/data analyst}{OVD-Info}{Remote}{}{
+  OVD-Info is an independent human rights media project.
+  I'm participating in development and support of information collection and analysis systems for OVD-Info using SQL, Python and Django.
+}
+\cventry{Jan~2021 -- now}{Technical volunteer}{Memorial}{Remote}{}{}
+
 \section{Languages}
 \cvitemwithcomment{Russian}{Native speaker}{}
 \cvitemwithcomment{English}{Fluent}{}
+\cvitemwithcomment{Dutch}{Beginner}{}
 \cvitemwithcomment{German}{Beginner}{}
 \cvitemwithcomment{Tatar}{Beginner}{}
-
-\section{Skills}
-\subsection{Main:}
-\cvitem{}{C++ (Eigen), Python (Jupyter, NumPy, Keras, Sklearn), Git, ROS, Linux, Machine Learning, Computer Vision. }
-\subsection{Experience with:}
-\cvitem{}{Bash, C, OpenCV, JS (some outdated frameworks), Django,  Docker, \LaTeX, Dynamic systems math
-modelling, Matlab/Simulink. }
 
 \section{Pet projects}
 \cventry{}{rTerm}{\url{github.com/robolamp/rTerm}}{}{}{
@@ -161,7 +187,7 @@ multiple times and publishing animation of the most interesting one every
 12 hours at \href{t.me/random_three_body_problem}{Telegram channel}.
 \newline}
 
-\section{Interests}
-\cvitem{}{Space, alpine skiing, cross-country skiing, bicycling.}
+\section{Interests/hobbies}
+\cvitem{}{wildife photography, alpine skiing, cross-country skiing, books, jogging}
 
 \end{document}
