Fix: missing talk added

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -146,6 +146,7 @@ Full-stack web-development
 % A short talk in Russian about data processing pipeline in
 % Yandex Self-Driving Cars project. \newline
 % }
+\cventry{2023}{How does ChatGPT work?}{Presented on a YouTube}{}{}{}
 \cventry{2023}{What's going on in AI world}{Presented in Warsaw}{}{}{}
 % A short talk in Russian about data processing pipeline in
 % Yandex Self-Driving Cars project. \newline
