--- a/my_cv_full_eng.tex
+++ b/my_cv_full_eng.tex
@@ -145,7 +145,12 @@ Full-stack web-development
   A short talk in Russian about data processing pipeline in
   Yandex Self-Driving Cars project. \newline
 }
-\cventry{2023}{What's going on in AI world}{Presented in Warsaw}{}{}{}
+\cventry{2023}{How does ChatGPT work?}{Presented on a YouTube}{}{}{
+  A talk in Russian about how ChatGPT works for tech folks who aren't working in AI.
+}
+\cventry{2023}{What's going on in AI world}{Presented in Warsaw}{}{}{
+  A popular talk in Russian abour recent history and trends in AI world for non-tech people.
+}
 
 \section{Education}
 \cvitem{2010--2015}{
