UPD: Linkedin address update

--- a/my_cv_full_eng.tex
+++ b/my_cv_full_eng.tex
@@ -20,7 +20,7 @@
 % \email{robolamp@ya.ru}
 \email{redslowj@gmail.com} 
 \social[github]{robolamp}
-\social[linkedin][https://www.linkedin.com/in/yulia-yakovleva-633505100/]{Yulia Yakovleva}
+\social[linkedin][https://www.linkedin.com/in/robolamp/]{Yulia Yakovleva}
 \extrainfo{\url{kotobank.ch/~robolamp/}}
 
 \begin{document}
