UPD: title update

--- a/my_cv_full_eng.tex
+++ b/my_cv_full_eng.tex
@@ -15,7 +15,7 @@
 
 % personal data
 \name{Yulia}{Yakovleva}
-\title{Software engineer}
+\title{Machine Learning Engineer}
 \address{}{Amsterdam}{Netherlands}
 % \email{robolamp@ya.ru}
 \email{redslowj@gmail.com} 
