Doing what was already done

--- a/my_cv_full_eng.tex
+++ b/my_cv_full_eng.tex
@@ -35,7 +35,7 @@
 
 \section{Experience}
 
-\cventry{November~2022 -- Now}{Machine learning engineer}{Stability.ai}{Amsterdam}{}{
+\cventry{November~2022 -- May~2024}{Machine learning engineer}{Stability.ai}{Amsterdam}{}{
   I worked on the following projects:
 \begin{itemize}   
     \item Stable-Finetuning (Python, PyTorch, CUDA, diffusion models, HPC):
