fix personal site link

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -21,7 +21,7 @@
 \email{robolamp@robolamp.me} 
 \social[github]{robolamp}
 \social[linkedin][https://www.linkedin.com/in/robolamp/]{Yulia Yakovleva}
-\extrainfo{\url{robolamp.me}}
+\extrainfo{\url{https://www.robolamp.me}}
 
 \begin{document}
 \makecvtitle
