--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -29,7 +29,7 @@
 \section{Main skills}
 \cvitem{Programming}{Python (PyTorch, TensorFlow, NumPy, Scikit-learn, Keras, huggingface, transformers, diffusers), C++ (Eigen), Git, Bash}
 \cvitem{AI/ML}{Model optimization, Generative AI, Diffusion Models, LLMs, Deep Learning, Computer Vision, NLP}
-\cvitem{Systems}{Linux, CUDA, HPC, AWS, Docker, ROS}
+\cvitem{Systems}{Linux, HPC, Docker, ROS}
 
 \section{Experience}
 
@@ -135,28 +135,28 @@ Full-stack web-development
 }
 
 \section{Publications \& Talks}
-\cventry{2019}{Myths about Self-Driving Cars}{Presented at WTM Moscow}{}{}{}
+\cventry{2019}{Myths about Self-Driving Cars}{Presented at \href{https://gdgmoscow.timepad.ru/event/1101498/}{WTM Moscow}}{}{}{}
 % An interactive talk in Russian about self-driving cars architecture,
 % sensors and testing. \newline
 % }
-\cventry{2019}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow and PyLadies Kazan}{}{}{}
+\cventry{2019}{Traffic Lights in Yandex Self-Driving Cars}{Presented at \href{https://medium.com/yandex-self-driving-car/yandex-self-driving-meetup-817e905b3d4a}{Yandex Self-Driving Meetup 2019}, \href{https://twitter.com/pyladies_msk/status/1145709227513733120}{PyLadies Moscow} and \href{https://x.com/pyladieskzn/status/1161901466430377985}{PyLadies Kazan}}{}{}{}
 % A short talk in Russian about the difficulties of traffic lights recognition and
 % about Yandex Self-Driving Cars traffic lights recognition pipeline. \newline
 % }
-\cventry{2020}{Data mining in Yandex Self-Driving Cars}{Presented at Pytup Moscow}{}{}{}
+\cventry{2020}{Data mining in Yandex Self-Driving Cars}{Presented at \href{https://events.yandex.ru/events/pytup-26-02-2020}{Pytup Moscow}}{}{}{}
 % A short talk in Russian about data processing pipeline in
 % Yandex Self-Driving Cars project. \newline
 % }
 \cventry{2020}{Method of and system for determining traffic signal state}{}{}{}{
   Artamonov, Kalyuzhny, Yakovleva
   \begin{itemize}
-    \item US Patent US20210201058A1, application at 2020.09.28, granted.
-    \item European Patent EP3842996A1, application at 2020.10.14, pending.
+    \item US Patent \href{https://patents.google.com/patent/US20210201058A1}{US20210201058A1}, application at 2020.09.28, granted.
+    \item European Patent \href{https://patents.google.com/patent/EP3842996A1}{EP3842996A1}, application at 2020.10.14, pending.
   \end{itemize}
 }
 
-\cventry{2023}{How does ChatGPT work?}{Presented on a YouTube}{}{}{}
-\cventry{2023}{What's going on in AI world}{Presented in Warsaw}{}{}{}
+\cventry{2023}{How does ChatGPT work?}{Presented at \href{https://youtu.be/g2u21UsAS84}{Between Brackets podcast}}{}{}{}
+\cventry{2023}{What's going on in AI world}{Presented in Warsaw \href{https://gdgmoscow.timepad.ru/event/1101498/}{} }{}{}{}
 % A short talk in Russian about data processing pipeline in
 % Yandex Self-Driving Cars project. \newline
 % }
